examples/mood/tests/evaluate/undefined_variable.mood.expected
-----------------
INPUT
----------------- 
pub fn test(): f64 {
    oops
}
-----------------
OUTPUT
-----------------
Error: Undefined variable: oops:
 --> undefined_variable.mood:2:5

  | pub fn test(): f64 {
2 |     oops
  |     ^^^^ This variable is not defined.
  | }
