examples/mood/tests/evaluate/undefined_variable.mood
pub fn test(): f64 {
    oops
}